[gd_scene format=3 uid="uid://pmg4e31uukpu"]

[ext_resource type="Texture2D" uid="uid://5370t54yr0e2" path="res://Photos/email_icon.png" id="1_ctpb2"]
[ext_resource type="Script" uid="uid://c54ecnug7w1li" path="res://Scripts/inbox.gd" id="1_t5pcu"]
[ext_resource type="Script" uid="uid://cgiajeiqd5ja8" path="res://Scripts/emailData.gd" id="2_fms44"]
[ext_resource type="Resource" uid="uid://bxofofk77uumh" path="res://Emails/email1.tres" id="3_vfo86"]
[ext_resource type="Resource" uid="uid://cscc7poclnnje" path="res://Emails/email2.tres" id="4_nqgr2"]
[ext_resource type="Resource" uid="uid://dwbh18qf7ovw5" path="res://Emails/email3.tres" id="5_tkc3k"]
[ext_resource type="Resource" uid="uid://ctkxoitp4usos" path="res://Emails/email4.tres" id="6_am5dt"]
[ext_resource type="StyleBox" uid="uid://dlenascguhrbg" path="res://Styles/GreenButton.tres" id="7_7dd3p"]
[ext_resource type="Resource" uid="uid://b2gfhf25mlgfl" path="res://Emails/email5.tres" id="7_mfqa6"]
[ext_resource type="StyleBox" uid="uid://c04hsr682c0gd" path="res://Styles/RedButton.tres" id="7_tkc3k"]
[ext_resource type="StyleBox" uid="uid://be4xmedchw1c2" path="res://Styles/HoverGreenButton.tres" id="8_2w40r"]
[ext_resource type="StyleBox" uid="uid://7vh3wd7ded63" path="res://Styles/HoverRedButton.tres" id="9_mj77x"]
[ext_resource type="Texture2D" uid="uid://djuaqw0oqdmxw" path="res://Photos/hearth.png" id="13_ii1lt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2w40r"]
bg_color = Color(0, 0.5882353, 0.65882355, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_am5dt"]
bg_color = Color(0.4519357, 0.9233471, 0.9999998, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="inbox" type="Control" unique_id=1149034931]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t5pcu")
email_list = Array[ExtResource("2_fms44")]([ExtResource("3_vfo86"), ExtResource("4_nqgr2"), ExtResource("5_tkc3k"), ExtResource("6_am5dt"), ExtResource("7_mfqa6")])

[node name="ColorRect" type="ColorRect" parent="." unique_id=1322507279]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.65834, 0.65834, 0.6583398, 1)

[node name="Header1" type="ColorRect" parent="." unique_id=581643691]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 71.0
grow_horizontal = 2
color = Color(0.35595164, 0.7083737, 0.7891075, 1)

[node name="Label" type="Label" parent="Header1" unique_id=480523886]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = -34.5
offset_right = 230.0
offset_bottom = 34.5
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "EMAIL"

[node name="help" type="Button" parent="Header1" unique_id=1986007471]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.95800006
anchor_top = 0.5
anchor_right = 0.95800006
anchor_bottom = 0.5
offset_left = -38.61609
offset_top = -15.5
offset_right = 38.38391
offset_bottom = 18.5
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_2w40r")
theme_override_styles/hover = SubResource("StyleBoxFlat_am5dt")
text = "HELP"

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1421404183]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -567.5
offset_top = -246.0
offset_right = 567.5
offset_bottom = 281.49
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="VBoxContainer" unique_id=219372495]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Button" unique_id=1668212660]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_right = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Button/MarginContainer" unique_id=111115005]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Button/MarginContainer/HBoxContainer" unique_id=861906747]
layout_mode = 2
texture = ExtResource("1_ctpb2")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Button/MarginContainer/HBoxContainer" unique_id=2064314147]
layout_mode = 2
size_flags_vertical = 4

[node name="sender" type="Label" parent="VBoxContainer/Button/MarginContainer/HBoxContainer/VBoxContainer" unique_id=1902791265]
layout_mode = 2
text = "Sender:   support@mircosoft-security.com"

[node name="subject" type="Label" parent="VBoxContainer/Button/MarginContainer/HBoxContainer/VBoxContainer" unique_id=753144467]
layout_mode = 2
text = "Subject:   Action Required: Your account has been compromised"

[node name="Control" type="Control" parent="VBoxContainer/Button/MarginContainer/HBoxContainer" unique_id=1378536191]
layout_mode = 2
size_flags_horizontal = 3

[node name="accept" type="Button" parent="VBoxContainer/Button/MarginContainer/HBoxContainer" unique_id=1235758199]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/normal = ExtResource("7_7dd3p")
theme_override_styles/pressed = ExtResource("7_7dd3p")
theme_override_styles/hover = ExtResource("8_2w40r")
text = "Accept"

[node name="decline" type="Button" parent="VBoxContainer/Button/MarginContainer/HBoxContainer" unique_id=2057374395]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/normal = ExtResource("7_tkc3k")
theme_override_styles/pressed = ExtResource("7_tkc3k")
theme_override_styles/hover = ExtResource("9_mj77x")
text = "Decline"

[node name="Button2" type="Button" parent="VBoxContainer" unique_id=1910002090]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Button2" unique_id=1193115860]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_right = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Button2/MarginContainer" unique_id=479334371]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Button2/MarginContainer/HBoxContainer" unique_id=1330167267]
layout_mode = 2
texture = ExtResource("1_ctpb2")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Button2/MarginContainer/HBoxContainer" unique_id=1974357556]
layout_mode = 2
size_flags_vertical = 4

[node name="sender" type="Label" parent="VBoxContainer/Button2/MarginContainer/HBoxContainer/VBoxContainer" unique_id=2100430323]
layout_mode = 2
text = "Sender:   support@fedex-shipping.co"

[node name="subject" type="Label" parent="VBoxContainer/Button2/MarginContainer/HBoxContainer/VBoxContainer" unique_id=1396893446]
layout_mode = 2
text = "Subject:   Delivery Exception: Action Required for Package #7721-B"

[node name="Control" type="Control" parent="VBoxContainer/Button2/MarginContainer/HBoxContainer" unique_id=510363032]
layout_mode = 2
size_flags_horizontal = 3

[node name="accept" type="Button" parent="VBoxContainer/Button2/MarginContainer/HBoxContainer" unique_id=225124231]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/normal = ExtResource("7_7dd3p")
theme_override_styles/pressed = ExtResource("7_7dd3p")
theme_override_styles/hover = ExtResource("8_2w40r")
text = "Accept"

[node name="decline" type="Button" parent="VBoxContainer/Button2/MarginContainer/HBoxContainer" unique_id=337773956]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/normal = ExtResource("7_tkc3k")
theme_override_styles/pressed = ExtResource("7_tkc3k")
theme_override_styles/hover = ExtResource("9_mj77x")
text = "Decline"

[node name="Button3" type="Button" parent="VBoxContainer" unique_id=1247545802]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Button3" unique_id=347760898]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_right = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Button3/MarginContainer" unique_id=232416045]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Button3/MarginContainer/HBoxContainer" unique_id=1425064020]
layout_mode = 2
texture = ExtResource("1_ctpb2")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Button3/MarginContainer/HBoxContainer" unique_id=1186959457]
layout_mode = 2
size_flags_vertical = 4

[node name="sender" type="Label" parent="VBoxContainer/Button3/MarginContainer/HBoxContainer/VBoxContainer" unique_id=1574798865]
layout_mode = 2
text = "Sender:   support@cloudplatform.com"

[node name="subject" type="Label" parent="VBoxContainer/Button3/MarginContainer/HBoxContainer/VBoxContainer" unique_id=912519994]
layout_mode = 2
text = "Subject:   Scheduled Maintenance This Weekend"

[node name="Control" type="Control" parent="VBoxContainer/Button3/MarginContainer/HBoxContainer" unique_id=403757994]
layout_mode = 2
size_flags_horizontal = 3

[node name="accept" type="Button" parent="VBoxContainer/Button3/MarginContainer/HBoxContainer" unique_id=1322662899]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/normal = ExtResource("7_7dd3p")
theme_override_styles/pressed = ExtResource("7_7dd3p")
theme_override_styles/hover = ExtResource("8_2w40r")
text = "Accept"

[node name="decline" type="Button" parent="VBoxContainer/Button3/MarginContainer/HBoxContainer" unique_id=1885264255]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/normal = ExtResource("7_tkc3k")
theme_override_styles/pressed = ExtResource("7_tkc3k")
theme_override_styles/hover = ExtResource("9_mj77x")
text = "Decline"

[node name="Button4" type="Button" parent="VBoxContainer" unique_id=955754606]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Button4" unique_id=519964536]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_right = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Button4/MarginContainer" unique_id=964481454]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Button4/MarginContainer/HBoxContainer" unique_id=1358489612]
layout_mode = 2
texture = ExtResource("1_ctpb2")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Button4/MarginContainer/HBoxContainer" unique_id=993195507]
layout_mode = 2
size_flags_vertical = 4

[node name="sender" type="Label" parent="VBoxContainer/Button4/MarginContainer/HBoxContainer/VBoxContainer" unique_id=2007579908]
layout_mode = 2
text = "Sender:   claims@lottery-winner-awards.net"

[node name="subject" type="Label" parent="VBoxContainer/Button4/MarginContainer/HBoxContainer/VBoxContainer" unique_id=1505045352]
layout_mode = 2
text = "Subject:   CONGRATULATIONS! You have won $1,000,000!"

[node name="Control" type="Control" parent="VBoxContainer/Button4/MarginContainer/HBoxContainer" unique_id=1952755102]
layout_mode = 2
size_flags_horizontal = 3

[node name="accept" type="Button" parent="VBoxContainer/Button4/MarginContainer/HBoxContainer" unique_id=189031311]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/normal = ExtResource("7_7dd3p")
theme_override_styles/pressed = ExtResource("7_7dd3p")
theme_override_styles/hover = ExtResource("8_2w40r")
text = "Accept"

[node name="decline" type="Button" parent="VBoxContainer/Button4/MarginContainer/HBoxContainer" unique_id=814142641]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/normal = ExtResource("7_tkc3k")
theme_override_styles/pressed = ExtResource("7_tkc3k")
theme_override_styles/hover = ExtResource("9_mj77x")
text = "Decline"

[node name="Button5" type="Button" parent="VBoxContainer" unique_id=1222216509]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Button5" unique_id=880599435]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_right = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Button5/MarginContainer" unique_id=2055224180]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Button5/MarginContainer/HBoxContainer" unique_id=12172609]
layout_mode = 2
texture = ExtResource("1_ctpb2")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Button5/MarginContainer/HBoxContainer" unique_id=436664763]
layout_mode = 2
size_flags_vertical = 4

[node name="sender" type="Label" parent="VBoxContainer/Button5/MarginContainer/HBoxContainer/VBoxContainer" unique_id=1856898524]
layout_mode = 2
text = "Sender:   order-update@amazon.com"

[node name="subject" type="Label" parent="VBoxContainer/Button5/MarginContainer/HBoxContainer/VBoxContainer" unique_id=971742160]
layout_mode = 2
text = "Subject:   Your order #114-928374-1234567 confirmation"

[node name="Control" type="Control" parent="VBoxContainer/Button5/MarginContainer/HBoxContainer" unique_id=1178971485]
layout_mode = 2
size_flags_horizontal = 3

[node name="accept" type="Button" parent="VBoxContainer/Button5/MarginContainer/HBoxContainer" unique_id=1135053625]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/normal = ExtResource("7_7dd3p")
theme_override_styles/pressed = ExtResource("7_7dd3p")
theme_override_styles/hover = ExtResource("8_2w40r")
text = "Accept"

[node name="decline" type="Button" parent="VBoxContainer/Button5/MarginContainer/HBoxContainer" unique_id=1843871655]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/normal = ExtResource("7_tkc3k")
theme_override_styles/pressed = ExtResource("7_tkc3k")
theme_override_styles/hover = ExtResource("9_mj77x")
text = "Decline"

[node name="HelpPanel" type="Panel" parent="." unique_id=439541464]
visible = false
top_level = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="HelpPanel" unique_id=558168798]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.680294, 0.8160705, 0.96505386, 1)

[node name="Label" type="Label" parent="HelpPanel" unique_id=1250488873]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -195.0
offset_top = 26.0
offset_right = 195.0
offset_bottom = 95.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "PHISHING GUIDE"

[node name="RichTextLabel" type="RichTextLabel" parent="HelpPanel" unique_id=1847164336]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -489.25
offset_top = -204.25
offset_right = 489.25
offset_bottom = 294.25
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 25
theme_override_font_sizes/bold_font_size = 25
bbcode_enabled = true
text = "[b]What is Phishing?[/b]
Phishing is a type of cyber attack where scammers pretend to be a trusted company to steal your data.

[b]How to identify it:[/b]

• [b]Check the Sender:[/b] Look for strange email addresses or misspellings.
• [b]Urgency:[/b] They often use threats like \"Your account will be deleted\" to make you panic.
• [b]Links & Buttons:[/b] Be careful with buttons that ask for passwords or personal info.
• [b]Too good to be true:[/b] Beware of \"Free Prizes\" or \"Unclaimed Money\"."

[node name="closeHelp" type="Button" parent="HelpPanel" unique_id=1637903964]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.93000007
anchor_top = 0.085
anchor_right = 0.93000007
anchor_bottom = 0.085
offset_left = -58.360107
offset_top = -27.080002
offset_right = 57.639893
offset_bottom = 26.919998
grow_horizontal = 0
theme_override_styles/normal = ExtResource("7_tkc3k")
theme_override_styles/hover = ExtResource("9_mj77x")
text = "BACK"

[node name="Header" type="HBoxContainer" parent="." unique_id=1785596959]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1013.0
offset_top = 2.0
offset_right = 45.0
offset_bottom = 352.0
grow_horizontal = 0
scale = Vector2(0.14076418, 0.14292216)

[node name="Heart1" type="TextureRect" parent="Header" unique_id=1631907589]
layout_mode = 2
texture = ExtResource("13_ii1lt")

[node name="Heart2" type="TextureRect" parent="Header" unique_id=958816486]
layout_mode = 2
texture = ExtResource("13_ii1lt")

[node name="Heart3" type="TextureRect" parent="Header" unique_id=1672665818]
layout_mode = 2
texture = ExtResource("13_ii1lt")

[connection signal="pressed" from="Header1/help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button/MarginContainer/HBoxContainer/accept" to="." method="_on_accept_pressed" binds= ["Button", 0]]
[connection signal="pressed" from="VBoxContainer/Button/MarginContainer/HBoxContainer/decline" to="." method="_on_decline_pressed" binds= ["Button", 0]]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2/MarginContainer/HBoxContainer/accept" to="." method="_on_accept_pressed" binds= ["Button2", 1]]
[connection signal="pressed" from="VBoxContainer/Button2/MarginContainer/HBoxContainer/decline" to="." method="_on_decline_pressed" binds= ["Button2", 1]]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3/MarginContainer/HBoxContainer/accept" to="." method="_on_accept_pressed" binds= ["Button3", 2]]
[connection signal="pressed" from="VBoxContainer/Button3/MarginContainer/HBoxContainer/decline" to="." method="_on_decline_pressed" binds= ["Button3", 2]]
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4/MarginContainer/HBoxContainer/accept" to="." method="_on_accept_pressed" binds= ["Button4", 3]]
[connection signal="pressed" from="VBoxContainer/Button4/MarginContainer/HBoxContainer/decline" to="." method="_on_decline_pressed" binds= ["Button4", 3]]
[connection signal="pressed" from="VBoxContainer/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="VBoxContainer/Button5/MarginContainer/HBoxContainer/accept" to="." method="_on_accept_pressed" binds= ["Button5", 4]]
[connection signal="pressed" from="VBoxContainer/Button5/MarginContainer/HBoxContainer/decline" to="." method="_on_decline_pressed" binds= ["Button5", 4]]
[connection signal="pressed" from="HelpPanel/closeHelp" to="." method="_on_close_help_pressed"]
